--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@tboerc/maskfy": "^2.0.3",
     "formik": "^2.4.5",
     "pr-unit": "^2.0.2",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-svg": "^15.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
